--- a/project.html
+++ b/project.html
@@ -77,7 +77,6 @@
         <!-- navbar ends -->
     </header>
     <!-- header ends -->
-
     <!-- banner starts -->
     <section id="banner">
         <div class="container">
@@ -94,7 +93,6 @@
         </div>
     </section>
     <!-- banner ends -->
-
     <!--projects starts -->
     <section id="projects">
         <div class="container">
@@ -241,7 +239,6 @@
         </div>
     </section>
     <!--projects ends -->
-
     <!-- feedback starts -->
     <section id="feedback">
         <div class="container">
@@ -285,7 +282,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="col-lg-12">
                         <div class="feedback-item">
                             <div class="row">
@@ -528,10 +524,9 @@
                                 <div class="col-lg-10 col-10">
                                     <div class="feedback-p-about">
                                         <p class="text-white osw-reg fs-14">“Pleasing packaging. Swift delivery.
-                                            Recommended.”
-                                            Feedback for a Top-Rated Seller. The item was superb and good. Immensely
-                                            pleasing packaging. The delivery was superb. Item is of first-rate quality.”
-                                        </p>
+                                            Recommended.” Feedback for a Top-Rated Seller. The item was superb and good.
+                                            Immensely pleasing packaging. The delivery was superb. Item is of first-rate
+                                            quality.” </p>
                                     </div>
                                 </div>
                             </div>
@@ -574,12 +569,10 @@
         </div>
     </section>
     <!-- feedback ends -->
-
     <!-- footer starts -->
     <footer id="footer">
         <div class="footer-main">
             <div class="container">
-
                 <div class="footer-logo" data-aos="fade-down">
                     <div class="container d-flex justify-content-center">
                         <div class="row">
@@ -593,9 +586,7 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="row">
-
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="footer-item" data-aos="flip-left">
                             <div class="f-about-me cmn-f-item">
@@ -609,13 +600,11 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="footer-item" data-aos="flip-left">
                             <div class="f-link cmn-f-item">
                                 <h5 class="mb-0 text-up osw-med fs-32">important links</h5>
                                 <div class="footer-menu d-flex">
-
                                     <ul class="ps-0 me-5">
                                         <li>
                                             <a class="osw-reg text-up fs-18" href="index.html">Home</a>
@@ -633,7 +622,6 @@
                                             <a class="osw-reg text-up fs-18" href="ourteam.html">our team</a>
                                         </li>
                                     </ul>
-
                                     <ul class="ps-0 ms-5">
                                         <li>
                                             <a class="osw-reg text-up fs-18" href="project.html">projects</a>
@@ -651,12 +639,10 @@
                                             <a class="osw-reg text-up fs-18" href="whybest.html">why best</a>
                                         </li>
                                     </ul>
-
                                 </div>
                             </div>
                         </div>
                     </div>
-
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="footer-item" data-aos="flip-right">
                             <div class="f-client-photo cmn-f-item">
@@ -717,7 +703,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="footer-item" data-aos="flip-right">
                             <div class="footer-contact cmn-f-item">
@@ -737,7 +722,6 @@
                                             </div>
                                         </div>
                                     </li>
-
                                     <li>
                                         <div class="d-flex align-items-center">
                                             <div class="footer-contact-icn me-3">
@@ -752,7 +736,6 @@
                                             </div>
                                         </div>
                                     </li>
-
                                     <li>
                                         <div class="d-flex align-items-center">
                                             <div class="footer-contact-icn me-3">
@@ -806,19 +789,16 @@
         </div>
     </footer>
     <!-- footer ends -->
-
     <!--back-top button starts -->
     <div class="back-top-btn">
         <i class="fas fa-chevron-up fs-40"></i>
     </div>
     <!--back-top button ends -->
-
     <!-- preloder starts -->
     <div class="preloder-box">
         <span></span>
     </div>
     <!-- preloder ends -->
-
     <!-- color selection starts -->
     <section class="color-selection">
         <div class="color-btn">
@@ -833,14 +813,11 @@
         </ul>
     </section>
     <!-- color selection ends -->
-
     <!-- date-time starts -->
     <div class="date-time">
         <div class="text osw-bold"></div>
     </div>
     <!-- date-time ends -->
-
-
     <!-- jquery js -->
     <script src="js/jquery-2.2.4.min.js"></script>
     <!-- bootstrap js -->
